src/objects/FieloAlpha__PublicSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FieloPLT__ActiveContactsCalculation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Optimized Member Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ChallengesPrefix__c</fullName>
        <label>Challenges Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ContactRelationshipClass__c</fullName>
        <description>Custom class to relate new members with existing contacts.</description>
        <label>Contact Relationship Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CustomPage__c</fullName>
        <label>Custom Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optimized Component Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieloVersion__c</fullName>
        <label>Fielo Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Google__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optimized Program Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ImageObject__c</fullName>
        <description>API name of the object to save Images using the &quot;Photo Upload&quot; component (for example &quot;Attachment&quot; or &quot;Document&quot;).</description>
        <inlineHelpText>API name of the object to save Images using the &quot;Photo Upload&quot; component (for example &quot;Attachment&quot; or &quot;Document&quot;).</inlineHelpText>
        <label>Image Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Instance__c</fullName>
        <description>Instance (server) used by the Org (Backend)</description>
        <inlineHelpText>Instance (server) used by the Org (Backend)</inlineHelpText>
        <label>Instance</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Linkedin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zz_deprecated_Linkedin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MemberCodeClass__c</fullName>
        <label>zz_deprecated_Member Code Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NewsView__c</fullName>
        <inlineHelpText>This field contains the Id of the Organization-Wide Email Address from where you want to set the sender display name and sender email.</inlineHelpText>
        <label>Google Analytics code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PackagePrefix__c</fullName>
        <label>Package Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointCost__c</fullName>
        <label>zz_deprecated_Actual Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RewardView__c</fullName>
        <label>Organization-Wide Email Address Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SearchRewardMenu__c</fullName>
        <label>zz_deprecated_Search Reward Menu</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ShowVoucherCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable email for new user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SiteURL__c</fullName>
        <inlineHelpText>URL of the site used to send the links to continue the registration process</inlineHelpText>
        <label>zz_deprecated_Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zz_deprecated_Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UserCreationClass__c</fullName>
        <label>zz_deprecated_User Creation Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Public Settings</label>
</CustomObject>